--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,14 @@
     <string name="menu_rectangle">Rectangle</string>
     <string name="menu_triangle">Triangle</string>
     <string name="menu_squre">Square</string>
+    <string name="menu_circle">Circle</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="draw_line">Draw Line</string>
+    <string name="draw_circle">Draw Circle</string>
+    <string name="draw_square">Draw Square</string>
+    <string name="draw_rectangle">Draw Rectangle</string>
+
 
 </resources>
